--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/server-runtime": "^2.10.1",
     "@shopify/hydrogen": "2024.7.8",
     "@shopify/remix-oxygen": "^2.0.8",
+    "@shopify/storefront-api-client": "^1.0.2",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.8.0",
