--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.8.0",
+    "lucide-react": "^0.447.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
